@@ -939,19 +939,24 @@ def get_risk_model(oqparam):
     return riskinput.CompositeRiskModel(oqparam, rmdict, retro)
 
 
-def get_exposure(oqparam):
+def get_exposure(oqparam, header_only=False):
     """
     Read the full exposure in memory and build a list of
     :class:`openquake.risklib.asset.Asset` instances.
 
     :param oqparam:
         an :class:`openquake.commonlib.oqvalidation.OqParam` instance
+    :param header_only:
+        if True, read only the header of the exposure and ignore the assets
     :returns:
         an :class:`Exposure` instance or a compatible AssetCollection
     """
+    fname = oqparam.inputs['exposure']
+    if header_only:
+        return asset._get_exposure(fname, stop='assets')[0]
     logging.info('Reading the exposure')
     exposure = asset.Exposure.read(
-        oqparam.inputs['exposure'], oqparam.calculation_mode,
+        fname, oqparam.calculation_mode,
         oqparam.region, oqparam.ignore_missing_costs)
     exposure.mesh, exposure.assets_by_site = exposure.get_mesh_assets_by_site()
     return exposure
